--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Foundation for Sites</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+      <link rel="stylesheet" type="text/css" href="css/nav%2520css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="css/nav%20css/component.css" />
   </head>
   <body>
     <div class="Row">
