--- a/index.html
+++ b/index.html
@@ -10,54 +10,56 @@
 <link rel="stylesheet" href="css/app.css">
 <link rel="stylesheet" type="text/css" href="css/navcss/demo.css" />
 <link rel="stylesheet" type="text/css" href="css/navcss/component.css" />
+<link rel="stylesheet" type="text/css" href="css/portfoliocss/component.css" />
+<script src="js/portfoliojs/modernizr.custom.js"></script>
 </head>
 
 <body>
 <div class="Row">
 
 
-<section class="section section--menu" id="Valentine">
-<h2 class="section__title">Simple Designs 254</h2>
-<span class="link-copy"></span>
+    <section class="section section--menu" id="Valentine">
+        <h2 class="section__title">Simple Designs 254</h2>
+        <span class="link-copy"></span>
 
-<div class="row">
-    <nav class="menu menu--valentine">
-        <ul class="menu__list">
-            <li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Reviews</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">News</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
-        </ul>
-    </nav>
-</div>
-</section>
+        <div class="row">
+            <nav class="menu menu--valentine">
+                <ul class="menu__list">
+                    <li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Reviews</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">News</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </section>
 
 </div>
 <div class="row expanded">
-<ul class="grid cs-style-1">
-<li>
-    <figure>
-        <img src="img/head.jpg" alt="img01">
-        <figcaption>
-            <h3>Camera</h3>
-            <span>Jacob Cummings</span>
-            <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
-        </figcaption>
-    </figure>
-</li>
-<li>
-    <figure>
-       <img src="img/head.jpg" alt="img01">
-        <figcaption>
-            <h3>Camera</h3>
-            <span>Jacob Cummings</span>
-            <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
-        </figcaption>
-    </figure>
-</li>
-<!-- ... -->
-</ul>
+    <ul class="grid cs-style-1">
+        <li>
+            <figure>
+                <img src="img/head.jpg" alt="img01">
+                <figcaption>
+                    <h3>Camera</h3>
+                    <span>Jacob Cummings</span>
+                    <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                </figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <img src="img/head.jpg" alt="img01">
+                <figcaption>
+                    <h3>Camera</h3>
+                    <span>Jacob Cummings</span>
+                    <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                </figcaption>
+            </figure>
+        </li>
+        <!-- ... -->
+    </ul>
 
 
 </div>
@@ -70,42 +72,42 @@
 <script src="js/app.js"></script>
 <script src="js/navjs/classie.js"></script>
 <script src="js/navjs/clipboard.min.js"></script>
-
+<script src="js/portfoliojs/toucheffects.js"></script>
 <script>
-(function() {
-[].slice.call(document.querySelectorAll('.menu')).forEach(function(menu) {
-    var menuItems = menu.querySelectorAll('.menu__link'),
-        setCurrent = function(ev) {
-            ev.preventDefault();
+    (function() {
+        [].slice.call(document.querySelectorAll('.menu')).forEach(function(menu) {
+            var menuItems = menu.querySelectorAll('.menu__link'),
+                setCurrent = function(ev) {
+                    ev.preventDefault();
 
-            var item = ev.target.parentNode; // li
+                    var item = ev.target.parentNode; // li
 
-            // return if already current
-            if (classie.has(item, 'menu__item--current')) {
-                return false;
-            }
-            // remove current
-            classie.remove(menu.querySelector('.menu__item--current'), 'menu__item--current');
-            // set current
-            classie.add(item, 'menu__item--current');
-        };
+                    // return if already current
+                    if (classie.has(item, 'menu__item--current')) {
+                        return false;
+                    }
+                    // remove current
+                    classie.remove(menu.querySelector('.menu__item--current'), 'menu__item--current');
+                    // set current
+                    classie.add(item, 'menu__item--current');
+                };
 
-    [].slice.call(menuItems).forEach(function(el) {
-        el.addEventListener('click', setCurrent);
-    });
-});
+            [].slice.call(menuItems).forEach(function(el) {
+                el.addEventListener('click', setCurrent);
+            });
+        });
 
-[].slice.call(document.querySelectorAll('.link-copy')).forEach(function(link) {
-    link.setAttribute('data-clipboard-text', location.protocol + '//' + location.host + location.pathname + '#' + link.parentNode.id);
-    new Clipboard(link);
-    link.addEventListener('click', function() {
-        classie.add(link, 'link-copy--animate');
-        setTimeout(function() {
-            classie.remove(link, 'link-copy--animate');
-        }, 300);
-    });
-});
-})(window);
+        [].slice.call(document.querySelectorAll('.link-copy')).forEach(function(link) {
+            link.setAttribute('data-clipboard-text', location.protocol + '//' + location.host + location.pathname + '#' + link.parentNode.id);
+            new Clipboard(link);
+            link.addEventListener('click', function() {
+                classie.add(link, 'link-copy--animate');
+                setTimeout(function() {
+                    classie.remove(link, 'link-copy--animate');
+                }, 300);
+            });
+        });
+    })(window);
 </script>
 </body>
 
