--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SD254</title>
+<link rel="icon" href="img/kenya.png">
 <link rel="stylesheet" href="css/foundation.css">
 <link rel="stylesheet" href="css/app.css">
-<link rel="stylesheet" type="text/css" href="css/navcss/demo.css" />
+<!--<link rel="stylesheet" type="text/css" href="css/navcss/demo.css" />-->
 <link rel="stylesheet" type="text/css" href="css/navcss/component.css" />
 <link rel="stylesheet" type="text/css" href="css/portfoliocss/component.css" />
 <script src="js/portfoliojs/modernizr.custom.js"></script>
@@ -23,7 +24,8 @@
         <span class="link-copy"></span>
 
         <div class="row">
-            <nav class="menu menu--valentine">
+            <div class="column text-centered">
+            <nav class="menu menu--valentine" id="navi">
                 <ul class="menu__list">
                     <li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
                     <li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
@@ -32,6 +34,7 @@
                     <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
                 </ul>
             </nav>
+                </div>
         </div>
     </section>
 
@@ -49,6 +52,26 @@
             </figure>
         </li>
         <li>
+            <figure>
+                <img src="img/head.jpg" alt="img01">
+                <figcaption>
+                    <h3>Camera</h3>
+                    <span>Jacob Cummings</span>
+                    <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                </figcaption>
+            </figure>
+        </li>
+          <li>
+            <figure>
+                <img src="img/head.jpg" alt="img01">
+                <figcaption>
+                    <h3>Camera</h3>
+                    <span>Jacob Cummings</span>
+                    <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                </figcaption>
+            </figure>
+        </li>
+          <li>
             <figure>
                 <img src="img/head.jpg" alt="img01">
                 <figcaption>
