--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <link rel="stylesheet" type="text/css" href="css/navcss/component.css" />
 <link rel="stylesheet" type="text/css" href="css/portfoliocss/component.css" />
 <script src="js/portfoliojs/modernizr.custom.js"></script>
+ <link rel="stylesheet" type="text/css" href="css/shapecss/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/shapecss/component.css" />
+		<script src="js/shapejs/snap.svg-min.js"></script>
 </head>
 
 <body>
@@ -54,7 +57,7 @@
         <section id="grid" class="grid clearfix">
             <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
-                    <img src="images/1.png" />
+                    <img src="img/fashion/denim.jpg" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                         <path d="M 180,160 0,218 0,0 180,0 z" />
                     </svg>
@@ -70,7 +73,7 @@
             <!-- ... -->
             <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
-                    <img src="images/1.png" />
+                    <img src="img/fashion/fashion1.jpg" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                         <path d="M 180,160 0,218 0,0 180,0 z" />
                     </svg>
@@ -85,7 +88,7 @@
             </a>
             <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
-                    <img src="images/1.png" />
+                    <img src="img/fashion/afwl2012-asandia-hogan-054-simon-klyne.jpg" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                         <path d="M 180,160 0,218 0,0 180,0 z" />
                     </svg>
@@ -100,7 +103,7 @@
             </a>
             <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
-                    <img src="images/1.png" />
+                    <img src="img/fashion/unnamed.png" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                         <path d="M 180,160 0,218 0,0 180,0 z" />
                     </svg>
@@ -210,6 +213,35 @@ setTimeout(function() {
 });
 })(window);
 </script>
+    
+    <script>
+			(function() {
+	
+				function init() {
+					var speed = 330,
+						easing = mina.backout;
+
+					[].slice.call ( document.querySelectorAll( '#grid > a' ) ).forEach( function( el ) {
+						var s = Snap( el.querySelector( 'svg' ) ), path = s.select( 'path' ),
+							pathConfig = {
+								from : path.attr( 'd' ),
+								to : el.getAttribute( 'data-path-hover' )
+							};
+
+						el.addEventListener( 'mouseenter', function() {
+							path.animate( { 'path' : pathConfig.to }, speed, easing );
+						} );
+
+						el.addEventListener( 'mouseleave', function() {
+							path.animate( { 'path' : pathConfig.from }, speed, easing );
+						} );
+					} );
+				}
+
+				init();
+
+			})();
+		</script>
 </body>
 
 </html>
