--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     
 <div class="row expanded">
-<ul class="grid cs-style-1">
+<ul class="portfolio cs-style-1">
 <li>
 <figure>
 <img src="img/head.jpg" alt="img01">
