--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <nav class="menu menu--valentine" id="navi">
     <ul class="menu__list">
         <li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
+        <li class="menu__item"><a href="#sec02" class="menu__link">Shop</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Reviews</a></li>
         <li class="menu__item"><a href="#" class="menu__link">News</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
@@ -52,7 +52,7 @@
 </div>
     
 <!--    ===============navigation end==============  -->
-    <div class="row expanded">
+    <div class="row expanded" id="sec02">
     
         <section id="grid" class="grid clearfix">
             <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
