--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" type="text/css" href="css/shapecss/normalize.css" />
 <link rel="stylesheet" type="text/css" href="css/shapecss/component.css" />
 <script src="js/shapejs/snap.svg-min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/form.css" />
 </head>
 
 <body>
@@ -119,35 +120,11 @@
 </section>
 </div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 
 
 <div id="try" class="row expanded">
-<ul class="portfolio cs-style-1">
+<ul class="portfolio cs-style-2">
 <li>
     <figure>
         <img src="img/head.jpg" alt="img01">
@@ -194,6 +171,27 @@
 
 </div>
 
+    <div class="content bgcolor-1">
+				<h2 class="nomargin-bottom">Haruki</h2>
+				<span class="input input--haruki">
+					<input class="input__field input__field--haruki" type="text" id="input-1" />
+					<label class="input__label input__label--haruki" for="input-1">
+						<span class="input__label-content input__label-content--haruki">First Name</span>
+					</label>
+				</span>
+				<span class="input input--haruki">
+					<input class="input__field input__field--haruki" type="text" id="input-2" />
+					<label class="input__label input__label--haruki" for="input-2">
+						<span class="input__label-content input__label-content--haruki">Last Name</span>
+					</label>
+				</span>
+				<span class="input input--haruki">
+					<input class="input__field input__field--haruki" type="text" id="input-3" />
+					<label class="input__label input__label--haruki" for="input-3">
+						<span class="input__label-content input__label-content--haruki">Email</span>
+					</label>
+				</span>
+    </div>
 
 
 
@@ -204,6 +202,42 @@
 <script src="js/navjs/classie.js"></script>
 <script src="js/navjs/clipboard.min.js"></script>
 <script src="js/portfoliojs/toucheffects.js"></script>
+    <script src="js/classie.js"></script>
+		<script>
+			(function() {
+				// trim polyfill : https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/Trim
+				if (!String.prototype.trim) {
+					(function() {
+						// Make sure we trim BOM and NBSP
+						var rtrim = /^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/g;
+						String.prototype.trim = function() {
+							return this.replace(rtrim, '');
+						};
+					})();
+				}
+
+				[].slice.call( document.querySelectorAll( 'input.input__field' ) ).forEach( function( inputEl ) {
+					// in case the input is already filled..
+					if( inputEl.value.trim() !== '' ) {
+						classie.add( inputEl.parentNode, 'input--filled' );
+					}
+
+					// events:
+					inputEl.addEventListener( 'focus', onInputFocus );
+					inputEl.addEventListener( 'blur', onInputBlur );
+				} );
+
+				function onInputFocus( ev ) {
+					classie.add( ev.target.parentNode, 'input--filled' );
+				}
+
+				function onInputBlur( ev ) {
+					if( ev.target.value.trim() === '' ) {
+						classie.remove( ev.target.parentNode, 'input--filled' );
+					}
+				}
+			})();
+		</script>
     
 <script>
         (function() {
