modified members section

--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
 
 
 
-    <div class="row expanded" id="sec02">
+    <div class="row expanded members" id="sec02">
 
         <section id="grid" class="grid clearfix">
+            
             <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
-                    <img src="img/fashion/denim.jpg" />
+                    <img src="img/fashion/fashion1.jpg" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                         <path d="M 180,160 0,218 0,0 180,0 z" />
                     </svg>
@@ -127,7 +128,7 @@
             </a>
             <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
-                    <img src="img/fashion/unnamed.png" />
+                    <img src="img/fashion/fashion1.jpg" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                         <path d="M 180,160 0,218 0,0 180,0 z" />
                     </svg>
