modified portfolio section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="row expanded members" id="sec02">
 
         <section id="grid" class="grid clearfix">
-            
+
             <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
                     <img src="img/fashion/fashion1.jpg" />
@@ -148,8 +148,8 @@
 
 
     <div id="try" class="row expanded">
-        <ul class="portfolio cs-style-2">
-            <li>
+        <ul class="portfolio cs-style-2 large-up-3 columns">
+            <li class="columns">
                 <figure>
                     <img src="img/head.jpg" alt="img01">
                     <figcaption>
@@ -159,7 +159,8 @@
                     </figcaption>
                 </figure>
             </li>
-            <li>
+
+            <li class="columns">
                 <figure>
                     <img src="img/head.jpg" alt="img01">
                     <figcaption>
@@ -169,7 +170,8 @@
                     </figcaption>
                 </figure>
             </li>
-            <li>
+
+            <li class="columns">
                 <figure>
                     <img src="img/head.jpg" alt="img01">
                     <figcaption>
@@ -179,7 +181,58 @@
                     </figcaption>
                 </figure>
             </li>
-            <li>
+            <li class="columns">
+                <figure>
+                    <img src="img/head.jpg" alt="img01">
+                    <figcaption>
+                        <h3>Camera</h3>
+                        <span>Jacob Cummings</span>
+                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                    </figcaption>
+                </figure>
+            </li>
+            <li class="columns">
+                <figure>
+                    <img src="img/head.jpg" alt="img01">
+                    <figcaption>
+                        <h3>Camera</h3>
+                        <span>Jacob Cummings</span>
+                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                    </figcaption>
+                </figure>
+            </li>
+            <li class="columns">
+                <figure>
+                    <img src="img/head.jpg" alt="img01">
+                    <figcaption>
+                        <h3>Camera</h3>
+                        <span>Jacob Cummings</span>
+                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                    </figcaption>
+                </figure>
+            </li>
+            <li class="columns">
+                <figure>
+                    <img src="img/head.jpg" alt="img01">
+                    <figcaption>
+                        <h3>Camera</h3>
+                        <span>Jacob Cummings</span>
+                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                    </figcaption>
+                </figure>
+            </li>
+
+            <li class="columns">
+                <figure>
+                    <img src="img/head.jpg" alt="img01">
+                    <figcaption>
+                        <h3>Camera</h3>
+                        <span>Jacob Cummings</span>
+                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                    </figcaption>
+                </figure>
+            </li>
+            <li class="columns">
                 <figure>
                     <img src="img/head.jpg" alt="img01">
                     <figcaption>
