added portfolio sections

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 
     <div id="try" class="row expanded">
-        <ul class="portfolio cs-style-2 large-up-3 columns">
+        <ul class="portfolio cs-style-2 large-up-3  medium-up-2 small-up-2 columns">
             <li class="columns">
                 <figure>
                     <img src="img/head.jpg" alt="img01">
