--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div class="row expanded members" id="sec02">
 
-        <section id="grid" class="grid clearfix">
+        <section id="grid" class="grid clearfix ">
 
             <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
@@ -151,59 +151,59 @@
         <ul class="portfolio cs-style-2 large-up-3  medium-up-2 small-up-2 columns">
             <li class="columns">
                 <figure>
-                    <img src="img/head.jpg" alt="img01">
+                    <img src="img/fashion/1.jpg" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
-                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                        <a href="img/fashion/1.jpg">Take a look</a>
                     </figcaption>
                 </figure>
             </li>
 
             <li class="columns">
                 <figure>
-                    <img src="img/head.jpg" alt="img01">
+                    <img src="img/fashion/2.jpg" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
-                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                        <a href="img/fashion/2.jpg">Take a look</a>
                     </figcaption>
                 </figure>
             </li>
 
             <li class="columns">
                 <figure>
-                    <img src="img/head.jpg" alt="img01">
+                    <img src="img/fasion/3.jpg" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
-                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                        <a href="img/fashion/3.jpg">Take a look</a>
                     </figcaption>
                 </figure>
             </li>
             <li class="columns">
                 <figure>
-                    <img src="img/head.jpg" alt="img01">
+                    <img src="img/fashion/4.jpg" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
-                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                        <a href="img/fashion/4.jpg">Take a look</a>
                     </figcaption>
                 </figure>
             </li>
             <li class="columns">
                 <figure>
-                    <img src="img/head.jpg" alt="img01">
+                    <img src="img/fashion/6.jpg" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
-                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                        <a href="img/fashion/6.jpg">Take a look</a>
                     </figcaption>
                 </figure>
             </li>
             <li class="columns">
                 <figure>
-                    <img src="img/head.jpg" alt="img01">
+                    <img src="img/fashion/7.jpg" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
