modified nembers section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
         </div>
 
-
+ <!--    ====================================
+                     BAckground SLider
+===========================================================  -->
 
         <div class="row expanded slider-image" id="page">
 
@@ -71,7 +73,7 @@
     
     
     <!--    ====================================
-                     navigation end
+                     members SEction
 ===========================================================  -->
 
 
@@ -82,12 +84,12 @@
 
             <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
-                    <img src="img/fashion/fashion1.jpg" />
+                    <img src="img/fashion/18.jpg" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                         <path d="M 180,160 0,218 0,0 180,0 z" />
                     </svg>
                     <figcaption>
-                        <h2>Crystalline</h2>
+                        <h2>Manager</h2>
                         <p>Soko radicchio bunya nuts gram dulse.</p>
                         <button>View</button>
                     </figcaption>
@@ -98,12 +100,12 @@
             <!-- ... -->
             <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
-                    <img src="img/fashion/fashion1.jpg" />
+                    <img src="img/fashion/19.jpg" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                         <path d="M 180,160 0,218 0,0 180,0 z" />
                     </svg>
                     <figcaption>
-                        <h2>Crystalline</h2>
+                        <h2>Financial Officer</h2>
                         <p>Soko radicchio bunya nuts gram dulse.</p>
                         <button>View</button>
                     </figcaption>
@@ -113,29 +115,29 @@
             </a>
             <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
-                    <img src="img/fashion/afwl2012-asandia-hogan-054-simon-klyne.jpg" />
+                    <img src="img/fashion/25.jpg" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                         <path d="M 180,160 0,218 0,0 180,0 z" />
                     </svg>
                     <figcaption>
-                        <h2>Crystalline</h2>
+                        <h2>Marketing</h2>
                         <p>Soko radicchio bunya nuts gram dulse.</p>
-                        <button>View</button>
+                        <!-- <button>View</button> -->
                     </figcaption>
                 </figure>
 
 
             </a>
-            <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
+           <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
-                    <img src="img/fashion/fashion1.jpg" />
+                    <img src="img/fashion/unnamed.png" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                         <path d="M 180,160 0,218 0,0 180,0 z" />
                     </svg>
                     <figcaption>
-                        <h2>Crystalline</h2>
+                        <h2>Photography</h2>
                         <p>Soko radicchio bunya nuts gram dulse.</p>
-                        <button>View</button>
+                        <!-- <button>View</button> -->
                     </figcaption>
                 </figure>
 
@@ -173,16 +175,6 @@
 
             <li class="columns">
                 <figure>
-                    <img src="img/fasion/3.jpg" alt="img01">
-                    <figcaption>
-                        <h3>Camera</h3>
-                        <span>Jacob Cummings</span>
-                        <a href="img/fashion/3.jpg">Take a look</a>
-                    </figcaption>
-                </figure>
-            </li>
-            <li class="columns">
-                <figure>
                     <img src="img/fashion/4.jpg" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
@@ -193,11 +185,11 @@
             </li>
             <li class="columns">
                 <figure>
-                    <img src="img/fashion/6.jpg" alt="img01">
+                    <img src="img/fashion/25.jpg" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
-                        <a href="img/fashion/6.jpg">Take a look</a>
+                        <a href="img/fashion/25.jpg">Take a look</a>
                     </figcaption>
                 </figure>
             </li>
@@ -207,38 +199,48 @@
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
-                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                        <a href="img/fashion/7.jpg">Take a look</a>
                     </figcaption>
                 </figure>
             </li>
             <li class="columns">
                 <figure>
-                    <img src="img/head.jpg" alt="img01">
+                    <img src="img/fashion/18.jpg" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
-                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                        <a href="img/fashion/18.jpg">Take a look</a>
+                    </figcaption>
+                </figure>
+            </li>
+            <li class="columns">
+                <figure>
+                    <img src="img/fashion/17.jpg" alt="img01">
+                    <figcaption>
+                        <h3>Camera</h3>
+                        <span>Jacob Cummings</span>
+                        <a href="img/fashion/17.jpg">Take a look</a>
                     </figcaption>
                 </figure>
             </li>
 
             <li class="columns">
                 <figure>
-                    <img src="img/head.jpg" alt="img01">
+                    <img src="img/fashion/6.jpg" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
-                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                        <a href="img/fash6n/17.jpg">Take a look</a>
                     </figcaption>
                 </figure>
             </li>
             <li class="columns">
                 <figure>
-                    <img src="img/head.jpg" alt="img01">
+                    <img src="img/fashion/fashion.jpg" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
-                        <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                        <a href="img/fashion/fashion.jpg">Take a look</a>
                     </figcaption>
                 </figure>
             </li>
