modified contact section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/navcss/component.css" />
     <link rel="stylesheet" type="text/css" href="css/portfoliocss/component.css" />
-    <link rel="stylesheet" type="text/css" href="css/form.css" />
+   <!--  <link rel="stylesheet" type="text/css" href="css/form.css" /> -->
     
     <link rel="stylesheet" type="text/css" href="css/shapecss/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/shapecss/component.css" />
@@ -91,7 +91,7 @@
                     <figcaption>
                         <h2>Manager</h2>
                         <p>Soko radicchio bunya nuts gram dulse.</p>
-                        <button>View</button>
+                        <!-- <button>View</button> -->
                     </figcaption>
                 </figure>
 
@@ -105,9 +105,9 @@
                         <path d="M 180,160 0,218 0,0 180,0 z" />
                     </svg>
                     <figcaption>
-                        <h2>Financial Officer</h2>
+                        <h2>Finance</h2>
                         <p>Soko radicchio bunya nuts gram dulse.</p>
-                        <button>View</button>
+                        <!-- <button>View</button> -->
                     </figcaption>
                 </figure>
 
@@ -148,6 +148,10 @@
 
 
 
+
+<!--    ====================================
+                     portfolio SEction
+===========================================================  -->
 
     <div id="try" class="row expanded">
         <ul class="portfolio cs-style-2 large-up-3  medium-up-2 small-up-2 columns">
@@ -250,8 +254,13 @@
 
     </div>
 
+
+    <!--    ====================================
+                     Contact SEction
+===========================================================  -->
+
     <div class="content bgcolor-1">
-        <h2 class="nomargin-bottom">Contact Us</h2>
+        <h2 class="nomargin-bottom centered">Contact Us</h2>
         <span class="input input--haruki">
 					<input class="input__field input__field--haruki" type="text" id="input-1" />
 					<label class="input__label input__label--haruki" for="input-1">
