modified contact section

--- a/index.html
+++ b/index.html
@@ -279,6 +279,13 @@
 						<span class="input__label-content input__label-content--haruki">Email</span>
         </label>
         </span>
+
+        <span class="input input--haruki">
+                    <input class="input__field input__field--haruki" type="text" id="input-2" />
+                    <label class="input__label input__label--haruki" for="input-2">
+                        <span class="input__label-content input__label-content--haruki">Leave Comment</span>
+        </label>
+        </span>
     </div>
 
 
