modified portfolio section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div class="row expanded slider-image" id="page">
 
-        <ul class="cb-slideshow">
+        <ul class="cb-slideshow fullwidth">
             <li><span>Image 01</span><div><h3>re·lax·a·tion</h3></div></li>
             <li><span>Image 02</span><div><h3>qui·e·tude</h3></div></li>
             <li><span>Image 03</span><div><h3>bal·ance</h3></div></li>
@@ -280,7 +280,7 @@
         </label>
         </span>
 
-        <span class="input input--haruki">
+        <span class="input input--haruki centered">
                     <input class="input__field input__field--haruki" type="text" id="input-2" />
                     <label class="input__label input__label--haruki" for="input-2">
                         <span class="input__label-content input__label-content--haruki">Leave Comment</span>
