added parallax effects

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/shapecss/component.css" />
     <script src="js/portfoliojs/modernizr.custom.js"></script>
     <script src="js/shapejs/snap.svg-min.js"></script>
-    <!--<script src="js/prefixfree.min.js"></script>-->
+    <script src="js/parallax.min.js"></script>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
                      BAckground SLider
 ===========================================================  -->
 
-        <div class="row expanded slider-image" id="page">
+        <div class="row expanded slider-image parallax-window" data-parallax="scroll" id="page">
 
         <ul class="cb-slideshow fullwidth">
             <li><span>Image 01</span><div><h3>re·lax·a·tion</h3></div></li>
@@ -164,11 +164,11 @@
 
             <li class="columns">
                 <figure>
-                    <img src="img/fashion/2.jpg" alt="img01">
+                    <img src="img/8.JPG" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
-                        <a href="img/fashion/2.jpg">Take a look</a>
+                        <a href="img/8.JPG">Take a look</a>
                     </figcaption>
                 </figure>
             </li>
@@ -195,11 +195,11 @@
             </li>
             <li class="columns">
                 <figure>
-                    <img src="img/fashion/7.jpg" alt="img01">
+                    <img src="img/7.JPG" alt="img01">
                     <figcaption>
                         <h3>Camera</h3>
                         <span>Jacob Cummings</span>
-                        <a href="img/fashion/7.jpg">Take a look</a>
+                        <a href="img/7.JPG">Take a look</a>
                     </figcaption>
                 </figure>
             </li>
