added parallax effects

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
     <div class="row expanded members" id="sec02">
 
-        <section id="grid" class="grid clearfix ">
+        <section id="grid" class="grid clearfix small-up-2 medium-up-4 large-up-4 fullwidth centered columns">
 
-            <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
+            <a class="columns" href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
                     <img src="img/fashion/18.jpg" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
@@ -94,7 +94,7 @@
 
             </a>
             <!-- ... -->
-            <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
+            <a class="columns" href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
                     <img src="img/fashion/19.jpg" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
@@ -109,7 +109,7 @@
 
 
             </a>
-            <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
+            <a class="columns" href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
                     <img src="img/fashion/25.jpg" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
@@ -124,7 +124,7 @@
 
 
             </a>
-           <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
+           <a class="columns" href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                 <figure>
                     <img src="img/fashion/unnamed.png" />
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
