--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 var theDate=new Date();
                 document.write(theDate.getFullYear());
             </script> 
-            Erick Munene,  All rights reserved</p>
+            254DEsigns,  All rights reserved</p>
         </div>
  </div>
     
