changed members section

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
     <div class="position">Media Editor</div>
 </figure>
             
-            <figure class="snip0045 green">
+    <figure class="snip0045 green">
     <figcaption>
-        <h2>Tiffany <span>Case</span></h2>
+        <h2>Joyce <span>Case</span></h2>
         <p>Some things don't need the thought people give them.</p>
         <div class="icons">
             <a href="#"><i class="ion-ios-home"></i></a>
