modified contact page

--- a/index.html
+++ b/index.html
@@ -242,8 +242,9 @@
 
 
 
-        <section class="row content bgcolor-1" id="contact">
-            <div>
+        <div class="row content bgcolor-1" id="contact">
+           
+            <div class="small-12 large-12 columns">
                 <h2>CONTACT US</h2>
                 <span class="small-12 large-6 input input--haruki">
                     <input class="input__field input__field--haruki" type="textarea" id="input-3" />
@@ -271,8 +272,8 @@
                 </label>
                 </span>
             </div>
-            <button class=" small-12 large-6 large-centered button button--wayra button--border-thin button--round-s">send </button>
-        </section>
+            <button class=" small-12 small-centered large-6 large-centered button button--wayra button--border-thin button--round-s">send </button>
+        </div>
 
 
         <div class="row expanded">
