--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>254 Designs</title>
-    <link rel="favicon" href="images/kenya.png">
+    <link rel="icon" href="images/kenya.png">
     <link href='https://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Aguafina+Script' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/animate.css">
@@ -45,13 +45,13 @@
             </section>
 
 
-            <div class="row small-12 animated slideInUp columns">
+            <div class="row small-12 small-centered animated slideInUp columns">
                 <h1>254 DESIGN AGENCY</h1>
                 <h3>for the latest trendy look <br>customized just for you</h3>
             </div>
             <div class=" row box bg-2">
                 <a href="#about-us">
-                    <button class=" small-12 large-6 large-centered button button--wayra button--border-thin button--round-s">Learn More </button>
+                    <button class=" small-12 large-6 large-centered small-centered button button--wayra button--border-thin button--round-s">Learn More </button>
                 </a>
             </div>
 
@@ -276,12 +276,12 @@
         </div>
 
 
-        <div class="row expanded">
+        <div class="row expanded social">
 
-            <div class=" small-12  columns social" id="social">
+            <div class=" small-12 small-centered large-centered columns social" id="social">
 
 
-                <ul>
+                <ul  class=" small-12 small-centered large-centered columns" >
 
                     <li> <a href="https://twitter.com/erickmunene6"><i class="fa fa-twitter"></i></a></li>
                     <li> <a href="https://facebook.com/erick.wahome"><i class="fa fa-facebook"></i></a></li>
